Tue Nov  4 07:09:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-cygwin32.h:
          Added ACE_LACKS_ISCTYPE

Tue Nov  4 07:05:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-aix-5.x.h:
          Added ACE_HAS_CTYPE_T

Mon Nov  3 20:05:10 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/config-macosx-leopard.h:
          Added ACE_ISCTYPE_EQUIVALENT.

Mon Nov  3 17:15:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-lynxos.h:
          Added ACE_LACKS_ISBLANK/ACE_LACKS_ISCTYPE

Mon Nov  3 14:35:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Disabled several tests with CORBA/e compact/micro

Mon Nov  3 13:17:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks5.x.h:
        * ace/config-vxworks6.2.h:
        * ace/config-vxworks6.3.h:
        * ace/config-vxworks6.4.h:
          Added ACE_LACKS_ISBLANK for kernel mode

Mon Nov  3 13:01:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks5.x.h:
        * ace/config-vxworks6.2.h:
        * ace/config-vxworks6.3.h:
        * ace/config-vxworks6.4.h:
          Added ACE_LACKS_ISCTYPE/ACE_LACKS_ISWCTYPE

Mon Nov  3 12:35:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-all.h
        * ace/OS_NS_ctype.inl
        * ace/OS_NS_time.h
          Including OS_NS_errno.h in config-all.h gives problems on linux

Mon Nov  3 10:51:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.inl:
          Use CeGetThreadPriority/CeSetThreadPriority when building
          for Windows CE. This fixes bugzilla 3487. Thanks to Danial Lang
          <danial dot lang at alphagate dot at> for reporting this.

Mon Nov  3 10:30:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Added bug 3486
